update main html

--- a/index.html
+++ b/index.html
@@ -5,196 +5,143 @@
   <meta charset="UTF-8">
   <link rel="icon" type="image/svg+xml" href="/vite.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>7 - cosplay</title>
+  <meta name="description" content="batteurs !">
+  <title>8 - batteur</title>
 </head>
 
 <body>
-  <header><img src="./img/logo.png" alt="logo">
-    <h1>On était au World Cosplay Summit</h1>
+  <header><img src="./img/les_batteurs.jpg" alt="logo">
     <nav>
       <ul>
-        <li class="nav-item">
-          <span>news</span>
-          <ul class="hover-container">
-            <li>
-              <img src="./img/cosplays/cosplay1.png" alt="">
-              <article>
-                <h3>le world cosplay summit</h3>
-                <ul>
-                  <li><a href="#">candy candy</a></li>
-                  <li><a href="#">prix spécial brother</a></li>
-                  <li><a href="#">convention japanim</a></li>
-                  <li><a href="#">concerts de J-Music</a></li>
-                  <li><a href="#">geek animes</a></li>
-                  <li><a href="#">japan Expo</a></li>
-                </ul>
-              </article>
-            </li>
-            <li>
-              <img src="./img/cosplays/cosplay2.png" alt="cosplay2">
-              <article>
-                <h3>tôkyô</h3>
-                <ul>
-                  <li><a href="#">geeks animes</a></li>
-                  <li><a href="#">green Tree Express</a></li>
-                  <li><a href="#">negibose Thailand</a></li>
-                  <li><a href="#">samsung Everland</a></li>
-                  <li><a href="#">fanimeCon</a></li>
-                </ul>
-              </article>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <span>gallery</span>
-          <ul class="hover-container">
-            <li>
-              <img src="./img/cosplays/cosplay3.png" alt="cosplay3">
-              <article>
-                <h3>le world cosplay summit</h3>
-                <ul>
-                  <li><a href="#">candy candy</a></li>
-                  <li><a href="#">prix spécial brother</a></li>
-                </ul>
-              </article>
-              <article>
-                <h3>tôkyô</h3>
-                <ul>
-                  <li><a href="#">geeks animes</a></li>
-                  <li><a href="#">mangas Trip</a></li>
-                  <li><a href="#">negibose Thailand</a></li>
-                  <li><a href="#">samsung Everland</a></li>
-                  <li><a href="#">fanimeCon</a></li>
-                </ul>
-              </article>
-            </li>
-            <li>
-              <img src="./img/cosplays/cosplay4.png" alt="cosplay4">
-              <article>
-                <h3>higashi-ku - nagoya</h3>
-                <ul>
-                  <li><a href="#">mangas</a></li>
-                  <li><a href="#">animes</a></li>
-                  <li><a href="#">tomokasu Sugila</a></li>
-                </ul>
-              </article>
-              <article>
-                <h3>visit japan</h3>
-                <ul>
-                  <li><a href="#">azuma Fukashi0</a></li>
-                  <li><a href="#">ichirou mizuki</a></li>
-                </ul>
-              </article>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <span>press</span>
-          <ul class="hover-container">
-            <li>
-              <img src="./img/cosplays/cosplay5.png" alt="cosplay5">
-              <article>
-                <h3>le world cosplay summit</h3>
-                <ul>
-                  <li><a href="#">candy candy</a></li>
-                  <li><a href="#">prix spécial brother</a></li>
-                  <li><a href="#">convention japanim</a></li>
-                  <li><a href="#">concerts de J-Music</a></li>
-                  <li><a href="#">geeks animes</a></li>
-                </ul>
-              </article>
-            </li>
-            <li>
-              <img src="./img/cosplays/cosplay6.png" alt="cosplay6">
-              <article>
-                <h3>cosplay championship</h3>
-                <ul>
-                  <li><a href="#">geeks animes</a></li>
-                  <li><a href="#">green Tree Express</a></li>
-                  <li><a href="#">negibose Thailand</a></li>
-                  <li><a href="#">samsung Everland</a></li>
-                  <li><a href="#">fanimeCon</a></li>
-                </ul>
-              </article>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item"><span>contact</span>
-          <ul class="hover-container">
-            <li>
-              <img src="./img/cosplays/cosplay7.png" alt="cosplay7">
-              <article>
-                <h3>tôkyô</h3>
-                <ul>
-                  <li><a href="#">negibose Thailand</a></li>
-                  <li><a href="#">samsung Everland</a></li>
-                  <li><a href="#">famineCon</a></li>
-                </ul>
-              </article>
-              <article>
-                <h3>higashi-ku - nagoya</h3>
-                <ul>
-                  <li>mangas</li>
-                  <li>animes</li>
-                  <li>tomokazu Sugita</li>
-                </ul>
-              </article>
-            </li>
-            <li>
-              <img src="./img/cosplays/cosplay8.png" alt="">
-              <article>
-                <h3>visit japan</h3>
-                <ul>
-                  <li><a href="#">azuma Fukashi0</a></li>
-                  <li><a href="#">ichirou Mizuki</a></li>
-                </ul>
-              </article>
-              <article>
-                <h3>le world cosplay summit</h3>
-                <ul>
-                  <li><a href="#">candy candy</a></li>
-                  <li><a href="#">prix spécial Brother</a></li>
-                  <li><a href="#">convention Japanim</a></li>
-                  <li><a href="#">concerts de J-Music</a></li>
-                  <li><a href="#">geeks animes</a></li>
-                  <li><a href="#">japan Expo</a></li>
-                </ul>
-              </article>
-            </li>
-          </ul>
-        </li>
+        <li><a href="#">pop batteurs</a></li>
+        <li><a href="#">batteries mystiques</a></li>
+        <li><a href="#">batteurs geeks</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <article>
-      <h2><span>Ōsu Kannon Temple</span><span>Cosplay Parade !</span></h2>
-      <img src="./img/wcs-cosplay.jpg" alt="wcs cosplay">
-      <p>C’est la dernière parade du WCS, et elle circule entre le temple et la Ôsu Shopping Street. Je suis arrivée à
-        9h
-        pour me
-        placer tranquillement, et la parade commençait à 10h (ponctualité japonaise, bonjour!) Mais déjà à cette
-        heure-là,
-        c’était plein à craquer! Heureusement que je suis un mini-pouce, j’ai réussi à me faxer jusqu’en première ligne
-        et
-        à
-        voyager entre le temple et la rue commerçante pour avoir plusieurs photos à des endroits différents. Mais la
-        foule
-        nippone, surtout pour du cosplay, c’est tout un concept.
-      </p>
-      <p>J’ai été super contente de découvrir toutes les teams (sauf les 8 pré-élues aux rounds de Tokyo) qui allaient «
-        s’affronter » le soir-même à la finale, mais également une belle troupe d’alumnis – d’anciens participants et
-        gagnants
-        aux WCS dont certains que j’admire tout particulièrement! Mais également des cosplayers amateurs venus parader
-        avec
-        toute la clique avec des choix de costume parfois très réussis, parfois très originaux.
-      </p>
-    </article>
+    <div>
+      <article>
+        <h2>les 3 meilleurs batteurs du monde et leurs solos inoubliables</h2>
+        <hr>
+        <p>Ils font palpiter la musique et les coeurs de ceux qui l'écoutent. Les batteurs, traditionnellement installés
+          à
+          l'arrière de la scène, sont pourtant l'essence même de la musique : le rythme. Un tempo qui peut se faire très
+          speed,
+          très puissant dans les genres musicaux que nous avons choisi d'aborder aujourd'hui : le rock, le hard rock et
+          leurs
+          enfants. Voici notre sélection des meilleurs batteurs de tous les temps. La liste ne peut être exhaustive, et
+          si vous
+          considérez qu'elle peut-être améliorée, n'hésitez pas à nous signaler vos héros des baguettes !
+        </p>
+        <picture>
+          <source media="(min-width: 900px)" srcset="./img/drumrollin-desktop.jpg">
+          <source srcset="./img/drumrollin-tablette.gif" media="(min-width: 600px)">
+          <img src="./img/drumrollin-mobile.jpg" alt="drumrollin">
+        </picture>
+      </article>
+      <article>
+        <h2>JOHN BONHAM</h2>
+        <hr>
+        <p>Un sacré bonhomme, ce Bonham. John Bonham, alias Bonzo, génie enchaîné, déchaîné, à ses fûts, a fait les plus
+          belles
+          heures des lives de "Led Zeppelin". Exemple, ce morceau de bravoure sur "Moby Dick" au Royal Albert Hall en
+          1970. Sur
+          cette performance purement bluffante (mais juste à titre d’exemple !), il frappe même les peaux à mains nues.
+          Erigé au
+          rang de "meilleur batteur de tous les temps" par le lectorat de "Rolling Stone" en 1973, ce natif du
+          Worcestershire,
+          mort à seulement 32 ans, reste une référence pour tous les amateurs de (très) bonnes baguettes.
+        </p>
+        <iframe width="715" height="523" src="https://www.youtube.com/embed/r9-42mu1D9Y"
+          title="Led zeppelin moby dick full" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
+      <article>
+        <h2>KEITH MOON</h2>
+        <hr>
+        <p>Au cas (improbable) où vous n’auriez jamais entendu parler des "Who", honte à vous car vous ne regardez même
+          pas les
+          Experts. Volontairement, nous avons choisi le titre (devenu générique emblématique de la série) "Who are you"
+          de la
+          bande de Roger Daltrey. Voici deux vidéos, dont l’une isole l’enregistrement de l’intro et du groove de feu le
+          diaboliquement talentueux Keith Moon. De quoi donner une petite idée de la sauvage virtuosité de celui qui a
+          inspiré
+          Animal, le batteur survolté du Muppet Show.
+        </p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/moNGqf6iSME" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
+      <article>
+        <h2>PHIL RUDD</h2>
+        <hr>
+        <p>Précis, puissant, généreux dans son style et énorme dans son groove, Phil Rudd est l’un des sales gosses qui
+          ont fait le
+          succès d'"AC/DC". L’Australien d’aujourd’hui 62 ans a certes eu des problèmes avec Malcolm Young mais sa
+          participation à
+          la bande emblématique du hard rock aura été déterminante.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ooXvMwVtmgs" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
+    </div>
+    <div>
+      <article>
+        <h2>Ginger Baker</h2>
+        <p>Attention, culte. "Cream" qui outre un certain Eric Clapton et Jack Bruce, tenait un sacré batteur en la
+          personne de
+          Ginger Baker nous a légué "Sunshine of your love" (1977) où, sans doute, l’homme derrière ses percussions,
+          souvent
+          novatrices pour l’époque, était au sommet de son art. Le Britannique a ensuite rejoint "Blind Faith" (toujours
+          avec
+          Clapton), puis créé la formation de jazz-rock "Ginger Baker’s Air Force" et a notamment collaboré avec Fela
+          Kuti.
+        </p>
+        <iframe width="697" height="523" src="https://www.youtube.com/embed/s1VNOw1JASM"
+          title="BEST DRUM SOLO EVER  GINGER BAKER" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
+      <article>
+        <h2>Ringo Starr</h2>
+        <p>Parmi les Fab Four, il n’est (tout étant relatif) certainement pas le premier qui viendra à l’esprit du grand
+          public,
+          mais Ringo Starr fut un sacrément bel atout du quatuor historique. Que serait, par exemple, "Come together"
+          sans son
+          sens animal du tempo ? Et l’on ne peut nier qu’il a contribué à l’évolution du style des "Beatles".
+        </p>
+        <iframe width="930" height="523" src="https://www.youtube.com/embed/-cicy9JR2jY"
+          title="Come Together - John Lennon - New York City 1972" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
+      <article>
+        <h2>Dave Grohl</h2>
+        <p>C'est pas drôle. Dave Grohl est si bien dans ses pompes de musicien que, de retour de concert, il vous donne
+          envie de
+          brûler vos instruments. Alors qu'il maîtrise déjà la guitare, la basse, le piano et chante (tant qu'à
+          faire...), il est
+          avant tout reconnu comme un batteur de folie. Cet autodidacte (du moins en ce qui concerne les bases des
+          percussions)
+          ultra-doué a donné toute leur puissance de feu à "Nirvana", "Queens of the stone age" ou encore "Them crooked
+          vultures"
+          (passons sur ses nombreuses collaborations et le fait qu'il a tout bêtement créé les "Foo fighters" !).</p>
+        <iframe width="930" height="523" src="https://www.youtube.com/embed/hTWKbfoikeg"
+          title="Nirvana - Smells Like Teen Spirit (Official Music Video)" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen></iframe>
+      </article>
+    </div>
   </main>
   <footer>
     <img src="./img/logovert.png" alt="logo eden school">
     <small>copyright Eden School</small>
-    <small>Source: COSPLAY TIME #4 – On était au World Cosplay Summit 2019!</small>
+    <small>Source: VIDEOS. Les 13 meilleurs batteurs du monde et leurs solos inoubliables - NouvelObs - Par
+      Jean-Frédéric Tronche</small>
   </footer>
   <script type="module" src="/main.js"></script>
 </body>
