--- a/index.html
+++ b/index.html
@@ -6,144 +6,152 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="batteurs !">
-  <title>8 - batteur</title>
+  <title>9 - histoire de robot</title>
 </head>
 
 <body>
-  <header><img src="./img/les_batteurs.jpg" alt="logo">
+  <header>
     <nav>
+      <img src="./img/logo.gif" alt="logo">
       <ul>
-        <li><a href="#">pop batteurs</a></li>
-        <li><a href="#">batteries mystiques</a></li>
-        <li><a href="#">batteurs geeks</a></li>
+        <li>
+          <a href="./pages/moyen_age.html">
+            <iconify-icon icon="fa-solid:robot"></iconify-icon>
+            le moyen age</a>
+        </li>
+        <li>
+          <a href="./pages/lumiere.html">
+            <iconify-icon icon="fa-solid:robot"></iconify-icon>
+            lumière
+          </a>
+        </li>
+        <li>
+          <a href="./pages/romantique.html">
+            <iconify-icon icon="fa-solid:robot"></iconify-icon>
+            romantique</a>
+        </li>
+        <li>
+          <a href="./pages/romantique.html">
+            <iconify-icon icon="fa-solid:robot"></iconify-icon>
+            l'après guerre</a>
+        </li>
+        <li>
+          <a href="./pages/contact.html">
+            <iconify-icon icon="fa-solid:robot"></iconify-icon>
+            en savoir plus</a>
+        </li>
       </ul>
     </nav>
+    <div class="header">
+      <h1>histoire des robots</h1>
+      <p><span>tant sur le plan du réel que de l'imaginaire, la robotique</span>
+        <span>nous subjugue car elle nous ramène
+          sans arrêt aux contours de la condition humaine...</span>
+      </p>
+    </div>
+    <form action="#">
+      <input type="text" placeholder="tu veux en savoir plus ?">
+      <button type="submit">ok</button>
+    </form>
   </header>
   <main>
-    <div>
+    <section class="robots-history">
+      <h2>le robot dans l'histoire</h2>
       <article>
-        <h2>les 3 meilleurs batteurs du monde et leurs solos inoubliables</h2>
-        <hr>
-        <p>Ils font palpiter la musique et les coeurs de ceux qui l'écoutent. Les batteurs, traditionnellement installés
-          à
-          l'arrière de la scène, sont pourtant l'essence même de la musique : le rythme. Un tempo qui peut se faire très
-          speed,
-          très puissant dans les genres musicaux que nous avons choisi d'aborder aujourd'hui : le rock, le hard rock et
-          leurs
-          enfants. Voici notre sélection des meilleurs batteurs de tous les temps. La liste ne peut être exhaustive, et
-          si vous
-          considérez qu'elle peut-être améliorée, n'hésitez pas à nous signaler vos héros des baguettes !
-        </p>
-        <picture>
-          <source media="(min-width: 900px)" srcset="./img/drumrollin-desktop.jpg">
-          <source srcset="./img/drumrollin-tablette.gif" media="(min-width: 600px)">
-          <img src="./img/drumrollin-mobile.jpg" alt="drumrollin">
-        </picture>
+        <iconify-icon icon="fa-solid:robot"></iconify-icon>
+        <h3>eniac le premier ordinateur electronique</h3>
+        <time>1946</time>
+        <p>ON IMAGINE QU'À UNE ÉPOQUE, L'ORDINATEUR POUVAIT PESER PLUS DE 30 TONNES, OCCUPER UN ESPACE DE 167M2 ET
+          CONSOMMER UNE
+          PUISSANCE DE 160 KW... ET POURTANT, C'EST BIEN LES DIMENSIONS ET LA PUISSANCE DE L'ENIAC CELECTRONIC
+          NUMERICAL
+          INTEGRATOR AND COMPUTER), LE PREMIER ORDINATEUR COMPLÈTEMENT ÉLECTRONIQUE, COMMANDÉ PAR L'ARMÉE AMÉRICAINE
+          POUR
+          EFFECTUER DES CALCULS BALISTIQUES.</p>
       </article>
       <article>
-        <h2>JOHN BONHAM</h2>
-        <hr>
-        <p>Un sacré bonhomme, ce Bonham. John Bonham, alias Bonzo, génie enchaîné, déchaîné, à ses fûts, a fait les plus
-          belles
-          heures des lives de "Led Zeppelin". Exemple, ce morceau de bravoure sur "Moby Dick" au Royal Albert Hall en
-          1970. Sur
-          cette performance purement bluffante (mais juste à titre d’exemple !), il frappe même les peaux à mains nues.
-          Erigé au
-          rang de "meilleur batteur de tous les temps" par le lectorat de "Rolling Stone" en 1973, ce natif du
-          Worcestershire,
-          mort à seulement 32 ans, reste une référence pour tous les amateurs de (très) bonnes baguettes.
-        </p>
-        <iframe width="715" height="523" src="https://www.youtube.com/embed/r9-42mu1D9Y"
-          title="Led zeppelin moby dick full" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+        <iconify-icon icon="fa-solid:robot"></iconify-icon>
+        <h3>eniac le premier ordinateur electronique</h3>
+        <time>1946</time>
+        <p>ON IMAGINE QU'À UNE ÉPOQUE, L'ORDINATEUR POUVAIT PESER PLUS DE 30 TONNES, OCCUPER UN ESPACE DE 167M2 ET
+          CONSOMMER UNE
+          PUISSANCE DE 160 KW... ET POURTANT, C'EST BIEN LES DIMENSIONS ET LA PUISSANCE DE L'ENIAC CELECTRONIC
+          NUMERICAL
+          INTEGRATOR AND COMPUTER), LE PREMIER ORDINATEUR COMPLÈTEMENT ÉLECTRONIQUE, COMMANDÉ PAR L'ARMÉE AMÉRICAINE
+          POUR
+          EFFECTUER DES CALCULS BALISTIQUES.</p>
       </article>
       <article>
-        <h2>KEITH MOON</h2>
-        <hr>
-        <p>Au cas (improbable) où vous n’auriez jamais entendu parler des "Who", honte à vous car vous ne regardez même
-          pas les
-          Experts. Volontairement, nous avons choisi le titre (devenu générique emblématique de la série) "Who are you"
-          de la
-          bande de Roger Daltrey. Voici deux vidéos, dont l’une isole l’enregistrement de l’intro et du groove de feu le
-          diaboliquement talentueux Keith Moon. De quoi donner une petite idée de la sauvage virtuosité de celui qui a
-          inspiré
-          Animal, le batteur survolté du Muppet Show.
-        </p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/moNGqf6iSME" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+        <iconify-icon icon="fa-solid:robot"></iconify-icon>
+        <h3>LE TEST DE TURING</h3>
+        <time>1950</time>
+        <p>ALAN TURING PROPOSA UN DES PREMIERS TESTS D'INTELLIGENCE ARTIFICIELLE PERMETTANT DE RÉPONDRE À LA QUESTION
+          SUIVANTE : «
+          UNE MACHINE PEUT-ELLE PENSER? »</p>
+        <p>À PARTIR DE CETTE QUESTION, IL A CONÇU UN TEST CONSISTANT À DEMANDER À UN OBSERVATEUR D'ENGAGER UNE
+          CONVERSATION AVEC
+          DEUX INTERLOCUTEURS INCONNUS ET DE DÉTERMINER PAR LA SUITE LEQUEL D'ENTRE EUX EST UN ORDINATEUR. TURING
+          CONSIDÉRAIT QUE
+          SI L'OBSERVATEUR NE PARVIENT PAS À LES DIFFÉRENCIER, ALORS LA MACHINE A RÉUSSI LE TEST.</p>
       </article>
       <article>
-        <h2>PHIL RUDD</h2>
-        <hr>
-        <p>Précis, puissant, généreux dans son style et énorme dans son groove, Phil Rudd est l’un des sales gosses qui
-          ont fait le
-          succès d'"AC/DC". L’Australien d’aujourd’hui 62 ans a certes eu des problèmes avec Malcolm Young mais sa
-          participation à
-          la bande emblématique du hard rock aura été déterminante.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ooXvMwVtmgs" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+        <iconify-icon icon="fa-solid:robot"></iconify-icon>
+        <h3>L'ODYSSÉE DE L'ESPACE PAR STANLEY KUBRICK</h3>
+        <time>1968</time>
+        <p>CE FILM DE SCIENCE-FICTION RACONTE, EN FAISANT DÉFILER PLUSIEURS ÉPOQUES, COMMENT UNE FORME D'INTELLIGENCE
+          INCONNUE DE
+          TYPE ARTIFICIELLE VA JOUER SUR LE DESTIN DE L'HUMANITÉ.</p>
+        <p>DANS L'EXTRAIT QUI SUIT, HAL, INTELLIGENCE ARTIFICIELLE, VA PRENDRE LE CONTRÔLE SUR L'HUMAIN. NOUS SOMMES
+          EN
+          1968,
+          PROJETÉS EN 2001, DANS UN MONDE OÙ L'INTELLIGENCE ARTIFICIELLE SEMBLE ÊTRE CAPABLE D'AFFRONTER
+          L'INTELLIGENCE
+          HUMAINE ET
+          DE S'EN AFFRANCHIR.</p>
       </article>
-    </div>
-    <div>
+    </section>
+    <section class="robots-history">
+      <h2>LES TROIS LOIS D'ISAAC ASIMOV</h2>
+      <p>À TRAVERS SON ŒUVRE DE SCIENCE-FICTION, LE CYCLE DES ROBOTS, ISAAC ASIMOV CÉCRIVAIN ET VULGARISATEUR
+        AMÉRICANO-RUSSE)
+        S'INSURGE CONTRE LES REPRÉSENTATIONS APOCALYPTIQUES, ANXIOGÈNES ET DIABOLIQUES DES ROBOTS. IL PROPOSE AINSI SES
+        « TROIS
+        LOIS DE LA ROBOTIQUE », QUI FERONT CEUVRE DE REPÈRES AUTANT DANS LE DOMAINE CULTUREL QUE SCIENTIFIQUE.</p>
       <article>
-        <h2>Ginger Baker</h2>
-        <p>Attention, culte. "Cream" qui outre un certain Eric Clapton et Jack Bruce, tenait un sacré batteur en la
-          personne de
-          Ginger Baker nous a légué "Sunshine of your love" (1977) où, sans doute, l’homme derrière ses percussions,
-          souvent
-          novatrices pour l’époque, était au sommet de son art. Le Britannique a ensuite rejoint "Blind Faith" (toujours
-          avec
-          Clapton), puis créé la formation de jazz-rock "Ginger Baker’s Air Force" et a notamment collaboré avec Fela
-          Kuti.
-        </p>
-        <iframe width="697" height="523" src="https://www.youtube.com/embed/s1VNOw1JASM"
-          title="BEST DRUM SOLO EVER  GINGER BAKER" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+        <iconify-icon icon="fa-solid:robot"></iconify-icon>
+        <h3>première loi</h3>
+        <p>UN ROBOT NE PEUT NUIRE À UN ÊTRE HUMAIN NI LAISSER SANS ASSISTANCE UN ÊTRE HUMAIN EN DANGER.</p>
       </article>
       <article>
-        <h2>Ringo Starr</h2>
-        <p>Parmi les Fab Four, il n’est (tout étant relatif) certainement pas le premier qui viendra à l’esprit du grand
-          public,
-          mais Ringo Starr fut un sacrément bel atout du quatuor historique. Que serait, par exemple, "Come together"
-          sans son
-          sens animal du tempo ? Et l’on ne peut nier qu’il a contribué à l’évolution du style des "Beatles".
-        </p>
-        <iframe width="930" height="523" src="https://www.youtube.com/embed/-cicy9JR2jY"
-          title="Come Together - John Lennon - New York City 1972" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+        <iconify-icon icon="fa-solid:robot"></iconify-icon>
+        <h3>DEUXIÈME LOI</h3>
+        <p>UN ROBOT DOIT OBÉIR AUX ORDRES QUI LUI SONT DONNÉS PAR LES ÊTRES HUMAINS, SAUF QUAND CES ORDRES SONT
+          INCOMPATIBLES AVEC
+          LA PREMIÈRE LOI.</p>
       </article>
       <article>
-        <h2>Dave Grohl</h2>
-        <p>C'est pas drôle. Dave Grohl est si bien dans ses pompes de musicien que, de retour de concert, il vous donne
-          envie de
-          brûler vos instruments. Alors qu'il maîtrise déjà la guitare, la basse, le piano et chante (tant qu'à
-          faire...), il est
-          avant tout reconnu comme un batteur de folie. Cet autodidacte (du moins en ce qui concerne les bases des
-          percussions)
-          ultra-doué a donné toute leur puissance de feu à "Nirvana", "Queens of the stone age" ou encore "Them crooked
-          vultures"
-          (passons sur ses nombreuses collaborations et le fait qu'il a tout bêtement créé les "Foo fighters" !).</p>
-        <iframe width="930" height="523" src="https://www.youtube.com/embed/hTWKbfoikeg"
-          title="Nirvana - Smells Like Teen Spirit (Official Music Video)" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen></iframe>
+        <iconify-icon icon="fa-solid:robot"></iconify-icon>
+        <h3>TROISIÈME LOI</h3>
+        <p>UN ROBOT DOIT PROTÉGER SA PROPRE EXISTENCE TANT QUE CETTE PROTECTION N'EST PAS INCOMPATIBLE AVEC LA PREMIÈRE
+          OU LA
+          DEUXIÈME LOI.</p>
       </article>
-    </div>
+    </section>
   </main>
   <footer>
+    <ul>
+      <li>accueil</li>
+      <li>le moyen age</li>
+      <li>lumière</li>
+      <li>romantique</li>
+      <li>l'après guerre</li>
+      <li>en savoir plus</li>
+    </ul>
     <img src="./img/logovert.png" alt="logo eden school">
-    <small>copyright Eden School</small>
-    <small>Source: VIDEOS. Les 13 meilleurs batteurs du monde et leurs solos inoubliables - NouvelObs - Par
-      Jean-Frédéric Tronche</small>
+    <small>copyright eden school</small>
+    <small>source: histoire des robots de l'antiquité à nous jours: entre mythes et réalité</small>
   </footer>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 
 </html>
