--- a/pages/moyen_age.html
+++ b/pages/moyen_age.html
@@ -103,14 +103,14 @@
     </main>
     <footer>
         <ul>
-            <li>accueil</li>
-            <li>le moyen age</li>
-            <li>lumière</li>
-            <li>romantique</li>
-            <li>l'après guerre</li>
-            <li>en savoir plus</li>
+            <li><a href="/">accueil</a></li>
+            <li><a href="./moyen_age.html">le moyen age</a></li>
+            <li><a href="./lumiere.html">lumière</a></li>
+            <li><a href="./romantique.html">romantique</a></li>
+            <li><a href="./apres_guerre.html">l'après guerre</a></li>
+            <li><a href="./contact.html">en savoir plus</a></li>
         </ul>
-        <img src="./img/logovert.png" alt="logo eden school">
+        <img src="../img/logovert.png" alt="logo eden school">
         <small>copyright eden school</small>
         <small>source: histoire des robots de l'antiquité à nous jours: entre mythes et réalité</small>
     </footer>
