--- a/pages/contact.html
+++ b/pages/contact.html
@@ -51,9 +51,19 @@
         <h1>contactez-nous pour en savoir plus sur l'histoire des robots</h1>
         <ul>
             <li>
-                <iconify-icon icon="fa-solid:voicemail"></iconify-icon>
+                <iconify-icon icon="fa-solid:voicemail" class="li-icon"></iconify-icon>
                 <hr>
                 <span>mail: <a href="mailto:contact@edenschool.fr">contact@edenschool.fr</a></span>
+            </li>
+            <li>
+                <iconify-icon icon="ic:outline-mobile-screen-share" class="li-icon"></iconify-icon>
+                <hr>
+                <span>tel: <a href="tel:0981786885">09 81 78 68 85</a></span>
+            </li>
+            <li>
+                <iconify-icon icon="fa6-brands:square-facebook" class="li-icon"></iconify-icon>
+                <hr>
+                <span class="f-col">a1 eden school sait tout !<a href="#">visiter notre page facebook</a></span>
             </li>
         </ul>
         <iframe
@@ -63,12 +73,12 @@
     </main>
     <footer>
         <ul>
-            <li>accueil</li>
-            <li>le moyen age</li>
-            <li>lumière</li>
-            <li>romantique</li>
-            <li>l'après guerre</li>
-            <li>en savoir plus</li>
+            <li><a href="/">accueil</a></li>
+            <li><a href="./moyen_age.html">le moyen age</a></li>
+            <li><a href="./lumiere.html">lumière</a></li>
+            <li><a href="./romantique.html">romantique</a></li>
+            <li><a href="./apres_guerre.html">l'après guerre</a></li>
+            <li><a href="./contact.html">en savoir plus</a></li>
         </ul>
         <img src="../img/logovert.png" alt="logo eden school">
         <small>copyright eden school</small>
