update entry point

--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
   </main>
   <footer>
     <ul>
-      <li>accueil</li>
-      <li>le moyen age</li>
-      <li>lumière</li>
-      <li>romantique</li>
-      <li>l'après guerre</li>
-      <li>en savoir plus</li>
+      <li><a href="/">accueil</a></li>
+      <li><a href="/pages/moyen_age.html">le moyen age</a></li>
+      <li><a href="/pages/lumiere.html">lumière</a></li>
+      <li><a href="/pages/romantique.html">romantique</a></li>
+      <li><a href="/pages/apres_guerre.html">l'après guerre</a></li>
+      <li><a href="/pages/contact.html">en savoir plus</a></li>
     </ul>
     <img src="./img/logovert.png" alt="logo eden school">
     <small>copyright eden school</small>
