--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           mort à seulement 32 ans, reste une référence pour tous les amateurs de (très) bonnes baguettes.
         </p>
         <iframe width="715" height="523" src="https://www.youtube.com/embed/r9-42mu1D9Y"
-          title="Led zeppelin moby dick full" frameborder="0"
+          title="Led zeppelin moby dick full"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </article>
@@ -71,7 +71,6 @@
           Animal, le batteur survolté du Muppet Show.
         </p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/moNGqf6iSME" title="YouTube video player"
-          frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </article>
@@ -84,7 +83,6 @@
           participation à
           la bande emblématique du hard rock aura été déterminante.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ooXvMwVtmgs" title="YouTube video player"
-          frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </article>
@@ -102,7 +100,7 @@
           Kuti.
         </p>
         <iframe width="697" height="523" src="https://www.youtube.com/embed/s1VNOw1JASM"
-          title="BEST DRUM SOLO EVER  GINGER BAKER" frameborder="0"
+          title="BEST DRUM SOLO EVER  GINGER BAKER"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </article>
@@ -115,7 +113,7 @@
           sens animal du tempo ? Et l’on ne peut nier qu’il a contribué à l’évolution du style des "Beatles".
         </p>
         <iframe width="930" height="523" src="https://www.youtube.com/embed/-cicy9JR2jY"
-          title="Come Together - John Lennon - New York City 1972" frameborder="0"
+          title="Come Together - John Lennon - New York City 1972"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </article>
@@ -131,7 +129,7 @@
           vultures"
           (passons sur ses nombreuses collaborations et le fait qu'il a tout bêtement créé les "Foo fighters" !).</p>
         <iframe width="930" height="523" src="https://www.youtube.com/embed/hTWKbfoikeg"
-          title="Nirvana - Smells Like Teen Spirit (Official Music Video)" frameborder="0"
+          title="Nirvana - Smells Like Teen Spirit (Official Music Video)"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </article>
