clean up profect and avoid w3c errors

--- a/pages/apres_guerre.html
+++ b/pages/apres_guerre.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="lumiere">
+    <meta name="description" content="après guerre">
     <title>9 - histoire de robot - après guerre</title>
 </head>
 
@@ -50,7 +50,6 @@
     <main>
         <h1>après-guerre</h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/FFUGtw7uzB4" title="YouTube video player"
-            frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
         <p>À CETTE ÉPOQUE, LES AUTOMATES ET CRÉATURES ARTIFICIELLES SONT ENCORE FORTEMENT ASSIMILÉES À LA NOTION
