--- a/pages/romantique.html
+++ b/pages/romantique.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="lumiere">
+    <meta name="description" content="romantique">
     <title>9 - histoire de robot - romantique</title>
 </head>
 
