update input form

--- a/pages/apres_guerre.html
+++ b/pages/apres_guerre.html
@@ -44,7 +44,7 @@
         </nav>
         <form action="#">
             <input type="text" placeholder="tu veux en savoir plus ?">
-            <button type="submit">ok</button>
+            <input type="submit" value="OK">
         </form>
     </header>
     <main>
