--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <form action="#">
       <input type="text" placeholder="tu veux en savoir plus ?">
-      <button type="submit">ok</button>
+      <input type="submit" value="OK">
     </form>
   </header>
   <main>
