--- a/pages/lumiere.html
+++ b/pages/lumiere.html
@@ -44,7 +44,7 @@
         </nav>
         <form action="#">
             <input type="text" placeholder="tu veux en savoir plus ?">
-            <button type="submit">ok</button>
+            <input type="submit" value="OK">
         </form>
     </header>
     <main>
