--- a/pages/moyen_age.html
+++ b/pages/moyen_age.html
@@ -45,7 +45,7 @@
         </nav>
         <form action="#">
             <input type="text" placeholder="tu veux en savoir plus ?">
-            <button type="submit">ok</button>
+            <input type="submit" value="OK">
         </form>
     </header>
     <main>
